# mhdeal

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DealiiExtensions.cpp  DealiiExtensions.h  INSTALL.md  README.md  adaptivity.cpp  adaptivity.h  assemblingUtilities.cpp  assemblingUtilities.h  boundaryCondition.cpp  boundaryCondition.h  boundaryConditions.cpp  boundaryConditions.h  build.sh  completeEllipticIntegrals.cpp  complete_elliptic_integrals.cc  complete_elliptic_integrals.h  dealiiExtensions.cpp  dealiiExtensions.h  equations.h  equationsEuler.cpp  equationsEuler.h  equationsMhd.cpp  equationsMhd.h  equationsMhd_inst.cpp  feDivFree.cpp  feDivFree.h  feTaylor.cpp  feTaylor.h  fe_div_free.cpp  fe_div_free.h  fe_is_constant_interface.h  fe_taylor.cpp  fe_taylor.h  initialCondition.cpp  initialCondition.h  main.cpp  numericalFlux.cpp  (+10 more)
cmake/: CMake - Deal - Linux.txt  CMake - Deal - Windows.txt  CMake - Trililnos - Linux.txt  CMake - Trililnos - Windows.txt  Setup Linux.txt
code/: CMakeLists.txt  boundaryConditions.cpp  boundaryConditions.h  equations.cpp  equations.h  equationsEuler.cpp  equationsEuler.h  equationsEuler_inst.cpp  equationsMhd.cpp  equationsMhd.h  equationsMhd_inst.cpp  equations_inst.cpp  initialCondition.cpp  initialCondition.h  main.cpp  parameters.cpp  parameters.h  problem.cpp  problem.h  util.cpp  util.h
doc/: newProblemSetup.md  newProblemSetup.txt
example-DG/: .gitignore  CMakeLists.txt  MHD3D.nb  MagMatrix_  MagRhs_  Matrix.txt  Rhs.txt  boundaryConditions.cpp  boundaryConditions.h  common.h  definitions.cpp  definitions.h  equationImplementation.cpp  equationImplementation.h  initialSln.cpp  initialSln.h  main.cpp  mhdSolver.cpp  mhdSolver.h  numericalFlux.cpp  numericalFlux.h  postProcessor.cpp  postProcessor.h
examples/: CMakeLists.txt
examples/current_sheet/: adaptivityCS.cpp  adaptivityCS.h  boundaryConditionCS.cpp  boundaryConditionCS.h  initialConditionCS.cpp  initialConditionCS.h  main.cpp  parametersCS.h
examples/mhd-blast/: CMakeLists.txt  adaptivityMhdBlast.cpp  adaptivityMhdBlast.h  initialConditionMhdBlast.cpp  initialConditionMhdBlast.h  main.cpp
examples/mhd-blast-full/: adaptivityMhdBlast.cpp  initialConditionMhdBlast.cpp  initialConditionMhdBlast.h  main.cpp
examples/mhd-blast-small/: adaptivityMhdBlast.cpp  adaptivityMhdBlast.h  initialConditionMhdBlast.cpp  main.cpp
examples/orszag-tang/: initialConditionOT.cpp  main.cpp
examples/orszag-tang-full/: CMakeLists.txt  initialConditionOT.cpp  main.cpp
examples/orszag-tang-small/: CMakeLists.txt  initialConditionOT.cpp  initialConditionOT.h  main.cpp
examples/small-test-problem/: CMakeLists.txt  main.cpp
examples/small-test-problem-iterative-improvements/: CMakeLists.txt  main.cpp
examples/small-test-problem-postprocess/: CMakeLists.txt  main.cpp
examples/small-test-problem/My Amplifier Results - small-test-problem/r000hs/: 6128.dataLim  MasterCollectionFlag.infoamplxe  runtool.6128.ipc
examples/titov-demoulin/: CMakeLists.txt  adaptivityTD.cpp  adaptivityTD.h  boundaryConditionTD.cpp  boundaryConditionTD.h  initialConditionTD.cpp  initialConditionTD.h  main.cpp  parametersTD.h
examples/utility-demo-test/: initialConditionDummy.cpp  initialConditionDummy.h  main.cpp
old-code-to-be-ported/: .gitignore  CMakeLists.txt  MHD3D.nb  boundaryConditions.cpp  definitions.cpp  definitions.h  main.cpp  mhdSolver.cpp  mhdSolver.h  numericalFlux.cpp  postProcessor.h
papers/: Blast Test Page.htm
papers/CompumagPoster/: .gitignore  CompumagPoster.tcp  CompumagPoster.tex  CompumagPoster.tps  baposter.cls  commands.tex
papers/HLLC/: HLLC.txt
tests/test-01-shapeset/: CMakeLists.txt  equations.cpp  equations.h  main.cpp  parameters.cpp  parameters.h  problem.cpp  problem.h
tests/test-02-euler-keep-state/: CMakeLists.txt  boundaryConditions.cpp  boundaryConditions.h  equations.h  equationsMhd.cpp  equationsMhd.h  equationsMhd_inst.cpp  initialCondition.cpp  initialCondition.h  main.cpp  parameters.cpp  parameters.h
tests/test-02-euler-simple/: CMakeLists.txt  boundaryConditions.cpp  boundaryConditions.h  equationsMhd_inst.cpp  initialCondition.cpp  initialCondition.h  parameters.cpp  parameters.h  problem.cpp  problem.h  util.h
